--- a/testparasite/Makefile.target
+++ b/testparasite/Makefile.target
@@ -24,14 +24,17 @@ parasite += writecall.o
 parasite += syscall.o
 parasite += parasite-head.o
 
-parasite-head.h: $(INCLUDE_DEP) $(INCLUDE_COMMON) parasite-head 
+parasite-head.h: $(INCLUDE_DEP) $(INCLUDE_COMMON) parasite-head headgen 
 
 	${shell rm parasite-head.h}
-	${shell xxd -i parasite-head > parasite-head.h}
+	${shell ./headgen parasite-head parasite-head.h}
+#	${shell xxd -i parasite-head > parasite-head.h}
 
 parasite-head: $(parasite) compel-pack.lds.S
 	$(LD) -pie writecall.o syscall.o parasite-head.o -o $@ -T compel-pack.lds.S
 
+headgen: headgen.c
+	$(CC) -o $@ $^
 
 
 %.o: %.S
