--- a/compel/Makefile.target
+++ b/compel/Makefile.target
@@ -1,15 +1,11 @@
-export CC
 export CFLAG
-export LD
-
-CC = gcc
 CFLAG = -Wall
 CFLAG += -c
-LD = ld
 
 include ../scripts/msg.mk
+include ../scripts/tools.mk
 
-UNAME := ${shell uname}
+#UNAME := ${shell uname}
 
 INCLUDE_COMMON = ../src/include/common
 
@@ -22,6 +18,7 @@ INCLUDE_TEST = $(INCLUDE) -I ./
 
 USE_FILES = /X
 USE_FILES += /tmp/shm
+
 
 .PHONY: all
 all: infect.a
@@ -38,6 +35,7 @@ headgen: headgen.c
 pie/parasite-head:
 	$(GNUMAKE) -e -C pie 
 
+
 inject += infect-rpc.o
 inject += infect.o
 
@@ -45,11 +43,12 @@ inject += infect.o
 %.o: %.c 
 	$(call msg-cc, $@)
 	$(Q) $(CC) $(INCLUDE) $(CFLAG) -o $@ $^
-	
+
+
 infect.a: parasite-head.h $(inject) $(USE_FILES)
 	$(call msg-gen, $@)
 	$(Q) ar cr infect.a $(inject)
-#$(Q) $(CC) -Wall -c $(INCLUDE) $(inject) -o $@
+
 
 /tmp/shm:
 	$(call msg-gen, $@)
