[add] fdinfo write to dump files, and read(restore).\ now, Do not run exactly because not restore memmap info

--- a/Makefile.target
+++ b/Makefile.target
@@ -26,7 +26,7 @@ ifneq ($(UNAME), FreeBSD)
 endif
 endif
 
-OBJ += compel/infect.a
+#OBJ += compel/infect.a
 OBJ += $(SRC_DIR)/files.o
 
 OBJ += $(SRC_DEP)/ptrace.o
